src/objects/Mercedes_Benz__c.object
<CustomObject>
    <fields>
        <fullName>Aclass__c</fullName>
        <label>Aclass</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Glc__c</fullName>
        <label>Glc</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gle__c</fullName>
        <label>Gle</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mercedes_parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>parent</label>
        <referenceTo>parent__c</referenceTo>
        <relationshipLabel>Mercedes Benzs</relationshipLabel>
        <relationshipName>Mercedes_Benzs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Mercedes Benz</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Mercedes Benz Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mercedes Benzs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>